# UTK

./: .gitignore  README.md  UTK.sln
Release/: UTK.lib  config.ini  utk_database.db  Учёт_техники.xlsx
UTK/: AboutDialog.cpp  BatteryPanel.h  GridFrameBase.cpp  GridFrameBase.h  RCa12312  SettingsDialog.cpp  SettingsDialog.h  UTK.APS  UTK.rc  UTK.vcxproj  UTK.vcxproj.filters  addNewRow.cpp  addNewRow.h  config.ini  gridFrame.h  gridFrameBattery.cpp  gridFrameSource.cpp  gridFrameSource.h  history.txt  main.cpp  main.h  resource1.h  resource2.h  sample.aps  sample.rc  sourceEditPanel.cpp  sourceEditPanel.h  utkGuiFrame.cpp  utkGuiFrame.h  utk_database.db
UTK/include/: .sqlite.h.swp  AboutDialog.h  AddRowDialogBind.h  Definitions.h  GridFrameBase.h  SQLiteTable.h  addNewRow.h  delClass.h  extradition.h  gridFrameBattery.h  gridFrameBinds.h  gridFrameSource.h  logFile.h  reception.h  resource.h  sourceEditPanel.h  sqlite.h  utkGuiFrame.h
UTK/rc/: UTK.rc  icon_track.xpm
UTK/src/: .sqlite.cpp.swp  AboutDialog.cpp  AddRowDialogBind.cpp  BatteryPanel.cpp  GridFrameBase.cpp  SQLiteTable.cpp  SettingsDialog.cpp  addNewRow.cpp  delClass.cpp  extradition.cpp  gridFrame.cpp  gridFrameBattery.cpp  gridFrameBinds.cpp  gridFrameSource.cpp  logFile.cpp  main.cpp  reception.cpp  sourceEditPanel.cpp  sqlite.cpp  utkGuiFrame.cpp
cmake/: CMakeLists.txt
